--- a/bedrock/firefox/templates/firefox/releases/aurora-notes.html
+++ b/bedrock/firefox/templates/firefox/releases/aurora-notes.html
@@ -4,16 +4,33 @@
 
 {% extends "firefox/releases/release-notes.html" %}
 
-{% block body_class %}fx-notes space{% endblock %}
+{% block body_class %}fx-notes blank{% endblock %}
+
+{% block page_css %}
+  {% stylesheet 'firefox_releasenotes_firefox' %}
+{% endblock %}
 
 {% set channel_name = 'Aurora' %}
 
-{% block site_header_logo %}
-    <h2><a href="{{ url('firefox') }}">{{ high_res_img('firefox/template/header-logo-inverse.png', {'alt': 'Mozilla Firefox', 'width': '185', 'height': '70'}) }}</a></h2>
-{% endblock %}
-
 {% block platform_switch %}
-    {% if release.major_version()|int() < 35 %}
-	{{ super() }}
-    {% endif %}
+  <div id="nav" class="navigator">
+    <div class="container">
+      <ul class="menu">
+        <li><a href="{{ url('firefox') + 'notes/' }}">{{ _('Desktop') }}</a></li>
+        <li><a href="{{ url('firefox') + 'android/notes/' }}">{{ _('Android') }}</a></li>
+        <li><a href="{{ url('firefox') + 'ios/1.1/releasenotes/' }}">{{ _('iOS') }}</a></li>
+        <li class="current submenu-title">
+          <a>{{ _('Other Releases') }}</a>
+          <ul class="submenu">
+            <li class="title">{{ _('Recent Desktop Releases') }}</li>
+            <li><a href="{{ url('firefox') + 'aurora/notes/' }}">{{ _('Latest Developer Edition') }}</a></li>
+            <li><a href="{{ url('firefox') + 'beta/notes/' }}">{{ _('Latest Beta') }}</a></li>
+            <li class="title">{{ _('Recent Android Releases') }}</a></li>
+            <li><a href="{{ url('firefox') + 'android/beta/notes/' }}">{{ _('Latest Beta') }}</a></li>
+            <li><a href="{{ url('firefox') + 'android/aurora/notes/' }}">{{ _('Latest Aurora') }}</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
 {% endblock %}
