[fix bug 1203746] Add Romania availabiliy to Orange Klif.

--- a/bedrock/firefox/templates/firefox/os/_get_device.html
+++ b/bedrock/firefox/templates/firefox/os/_get_device.html
@@ -153,6 +153,12 @@
             <li><a class="movistar" href="http://catalogo.movistar.com.pe/zte-open-2">ZTE Open II</a></li>
           </ul>
         </div>
+        <div class="provider" data-country="ro">
+          <h3>{{ _('Romania') }}</h3>
+          <ul>
+            <li><a class="orange" href="https://www.orange.ro/magazin-online/telefoane/orange-klif">Orange</a></li>
+          </ul>
+        </div>
         <div class="provider" data-country="rs">
           <h3>{{_('Serbia')}}</h3>
           <ul>
