--- a/bedrock/firefox/templates/firefox/os/devices.html
+++ b/bedrock/firefox/templates/firefox/os/devices.html
@@ -87,6 +87,7 @@
               <option value="ni">{{ _('Nicaragua') }}</option>
               <option value="pa">{{ _('Panama') }}</option>
               <option value="pe">{{ _('Peru') }}</option>
+              <option value="ro">{{ _('Romania') }}</option>
               <option value="ru">{{ _('Russia') }}</option>
               <option value="sn">{{ _('Senegal') }}</option>
               <option value="rs">{{ _('Serbia') }}</option>
@@ -2232,6 +2233,7 @@
                     <li>{{ _('Kenya') }}</li>
                     <li>{{ _('Madagascar') }}</li>
                     <li>{{ _('Mauritius') }}</li>
+                    <li>{{ _('Romania') }}</li>
                     <li>{{ _('Senegal') }}</li>
                     <li>{{ _('Tunisia') }}</li>
                   </ul>
