--- a/bedrock/firefox/templates/firefox/win10-welcome.html
+++ b/bedrock/firefox/templates/firefox/win10-welcome.html
@@ -2,7 +2,7 @@
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
-{% extends "firefox/base-resp.html" %}}
+{% extends "firefox/base-resp.html" %}
 
 {% block extra_meta %}<meta name="robots" content="noindex">{% endblock %}
 
@@ -44,23 +44,27 @@
 
 {% block content %}
 <main role="main">
-  <header class="main-header">
-    <h1>{{ _('Firefox + Windows 10. Perfect together.') }}</h1>
-    <p class="tagline">
-      {{ _('We’ve designed Firefox to work seamlessly with your Windows 10 update, giving
-      you the same great browsing experience you’ve come to love, with the privacy, speed
-      and choice you’ve come to expect.') }}
-    </p>
-  </header>
-  <section class="firefox-default-cta hidden">
-    <h2>{{ _('Make Firefox your default in 3 easy steps:') }}</h2>
-    <ol>
-      <li>{{ _('Click the button below') }}</li>
-      <li>{{ _('Scroll down to “Web browser”') }}</li>
-      <li>{{ _('Choose Firefox') }}</li>
-    </ol>
-    <button id="set-default" type="button" class="button-flat-dark">{{ _('Let’s do it') }}</button>
-  </section>
+  {% block main_header %}
+    <header class="main-header">
+      <h1>{{ self.page_title() }}</h1>
+      <p class="tagline">
+        {{ _('We’ve designed Firefox to work seamlessly with your Windows 10 update, giving
+        you the same great browsing experience you’ve come to love, with the privacy, speed
+        and choice you’ve come to expect.') }}
+      </p>
+    </header>
+  {% endblock %}
+  {% block default_cta %}
+    <section class="firefox-default-cta hidden">
+      <h2>{{ _('Make Firefox your default in 3 easy steps:') }}</h2>
+      <ol>
+        <li>{{ _('Click the button below') }}</li>
+        <li>{{ _('Scroll down to “Web browser”') }}</li>
+        <li>{{ _('Choose Firefox') }}</li>
+      </ol>
+      <button id="set-default" type="button" class="button-flat-dark">{{ _('Let’s do it') }}</button>
+    </section>
+  {% endblock %}
   <section class="firefox-learn-links">
     <ul>
       <li><a class="more" href="{{ url('firefox.desktop.trust') }}">
