--- a/bedrock/thunderbird/templates/thunderbird/releases/release-notes.html
+++ b/bedrock/thunderbird/templates/thunderbird/releases/release-notes.html
@@ -92,7 +92,7 @@
         <h3>{{ _('Try Thunderbird %s')|format(channel_name) }}</h3>
         <ol>
           <li class="try1">
-            <a href="{{ url('thunderbird.system_requirements', version) }}">
+            <a href="{{ url('thunderbird.sysreq', version) }}">
               {{ _('Check') }}
             </a>
           </li>
