--- a/bedrock/thunderbird/templates/thunderbird/base-resp.html
+++ b/bedrock/thunderbird/templates/thunderbird/base-resp.html
@@ -4,6 +4,9 @@
 
 {% extends "base-resp.html" %}
 
+{% block facebook_id %}348169218537151{# facebook.com/Thunderbird #}{% endblock %}
+{% block twitter_id %}mozthunderbird{% endblock %}
+
 {% block page_image %}{{ static('img/thunderbird/thunderbird-256.png') }}{% endblock %}
 {% block page_favicon %}{{ static('img/thunderbird/favicon.ico') }}{% endblock %}
 {% block page_favicon_large %}{{ static('img/thunderbird/favicon-196.png') }}{% endblock %}
@@ -22,7 +25,7 @@
     <li class="first" id="nav-main-features"><a href="{{ url('thunderbird.index') }}" tabindex="0" aria-owns="nav-main-features-submenu" aria-haspopup="true">{{_('Thunderbird')}}</a>
       <ul aria-expanded="false" id="nav-main-features-submenu" class="submenu">
         <li class="first">
-          <a href="/thunderbird/channel/" tabindex="-1">
+          <a href="{{ url('thunderbird.channel') }}" tabindex="-1">
             {{_('Releases')}}
           </a>
         </li>
@@ -39,7 +42,7 @@
       </ul>
     </li>
     <li id="nav-main-addons">
-      <a href="https://addons.mozilla.org/" tabindex="0" aria-owns="nav-main-addons-submenu" aria-haspopup="true">
+      <a href="https://addons.mozilla.org/thunderbird/" tabindex="0" aria-owns="nav-main-addons-submenu" aria-haspopup="true">
         {{_('Add-ons')}}
       </a>
       <ul aria-expanded="false" id="nav-main-addons-submenu" class="submenu">
@@ -56,17 +59,9 @@
       </ul>
     </li>
     <li class="last" id="nav-main-support">
-      <a href="https://support.mozilla.org/products/thunderbird/" tabindex="0"
-         aria-owns="nav-main-addons-submenu" aria-haspopup="true">
+      <a href="https://support.mozilla.org/products/thunderbird/" tabindex="0">
         {{_('Support')}}
       </a>
-      <ul aria-expanded="false" id="nav-main-addons-submenu" class="submenu">
-        <li class="first last">
-          <a href="https://support.mozilla.org/products/thunderbird" tabindex="-1">
-            {{_('Thunderbird Support')}}
-          </a>
-        </li>
-      </ul>
     </li>
   </ul>
 </nav>
