--- a/media/css/base/menu.less
+++ b/media/css/base/menu.less
@@ -23,10 +23,13 @@
         }
 
         &.hover a {
-            background-image: url(/media/img/sandstone/menu-point.png);
-            background-repeat: no-repeat;
-            background-position: center 2.75em;
             outline: 0;
+
+            &[aria-haspopup="true"] {
+                background-image: url(/media/img/sandstone/menu-point.png);
+                background-repeat: no-repeat;
+                background-position: center 2.75em;
+            }
         }
     }
 }
