Update URL to committers-agreement.pdf

--- a/bedrock/mozorg/templates/mozorg/mpl/license-policy.html
+++ b/bedrock/mozorg/templates/mozorg/mpl/license-policy.html
@@ -21,7 +21,7 @@
   <section>
     <h2 id="Introduction">Introduction</h2>
     <p><em>Overview: <a href='{{ static("img/mozorg/mpl/license-policy-flowchart.png") }}'>this flowchart</a> provides a summary of the policy that can help you decide which license to use.</em></p>
-    <p>This policy determines which license to use for source files stored in Mozilla-controlled code repositories, whether hosted at Mozilla or elsewhere - "Mozilla Repositories". Committers to Mozilla Repositories must comply with this policy, as they agreed to do in the <a href="http://mozilla.org/hacking/committer/committers-agreement.pdf">Committer's Agreement</a>.
+    <p>This policy determines which license to use for source files stored in Mozilla-controlled code repositories, whether hosted at Mozilla or elsewhere - "Mozilla Repositories". Committers to Mozilla Repositories must comply with this policy, as they agreed to do in the <a href="https://static.mozilla.com/foundation/documents/commit-access/committers-agreement.pdf">Committer's Agreement</a>.
     The following is a brief summary:</p>
     
     <ul>
